# Holographic_Vector_Datatbase

./: README.md  __init__.py  _algebra.py  _db.py  _registry.py  _schema.py  demo.py  demo_v2.py  docs.md  holographic_vdb.py  holographic_vdb_v2.py  pyproject.toml  test_holographic.py  todo.md
holographic/: __init__.py  _persist.py  _query.py
test/: test_holographic.py
