[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "holographic"
version = "3.0.0"
description = "Phase HRR Associative Memory Database"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["vector-database", "holographic", "HRR", "associative-memory", "hyperdimensional"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-cov"]

[tool.setuptools.packages.find]
where = ["."]
include = ["holographic*"]

[tool.pytest.ini_options]
testpaths = ["holographic"]
python_files = ["test_*.py"]
